Add intial gameboard structure to index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>Document</title>
   </head>
   <body>
+    <div class="gameboard">
+      <div class="gameboard__computer"></div>
+      <div class="gameboard__dialog">Rock, paper, or scissors?</div>
+      <div class="gameboard__user">
+        <button value="rock">Rock</button>
+        <button value="paper">Paper</button>
+        <button value="scissors">Scissors</button>
+      </div>
+    </div>
     <script src="./script.js"></script>
   </body>
 </html>
