Add id to index.html for js to taget for messages

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
   <body>
     <div class="gameboard">
       <div class="gameboard__computer"></div>
-      <div class="gameboard__dialog">Rock, paper, or scissors?</div>
+      <div class="gameboard__dialog">
+        <p class="gameboard__para" id="gameboard-para">
+          Make a selection, if you dare&hellip;
+        </p>
+      </div>
       <div class="gameboard__user">
         <button value="rock">Rock</button>
         <button value="paper">Paper</button>
