Add id to html to display selections

--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
   </head>
   <body>
     <div class="gameboard">
-      <div class="gameboard__computer"></div>
+      <div class="gameboard__computer">
+        <p class="gameboard__computer-selection" id="computer-selection"></p>
+      </div>
       <div class="gameboard__dialog">
         <p class="gameboard__para" id="gameboard-para">
-          Make a selection, if you dare&hellip;
+          Make a selection, if you dare...
         </p>
       </div>
       <div class="gameboard__user">
+        <p class="gameboard__user-selection" id="user-selection"></p>
         <button value="rock">Rock</button>
         <button value="paper">Paper</button>
         <button value="scissors">Scissors</button>
