Capitalize values in index.html and script.js

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
       </div>
       <div class="gameboard__user">
         <p class="gameboard__user-selection" id="user-selection"></p>
-        <button value="rock">Rock</button>
-        <button value="paper">Paper</button>
-        <button value="scissors">Scissors</button>
+        <button value="Rock">Rock</button>
+        <button value="Paper">Paper</button>
+        <button value="Scissors">Scissors</button>
       </div>
     </div>
     <script src="./script.js"></script>
