Add a button wrapper to index.html

--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
       </div>
       <div class="gameboard__user">
         <p class="gameboard__user-selection" id="user-selection"></p>
-        <button value="Rock">Rock</button>
-        <button value="Paper">Paper</button>
-        <button value="Scissors">Scissors</button>
+        <div class="gameboard__btn-wrapper">
+          <button value="Rock">Rock</button>
+          <button value="Paper">Paper</button>
+          <button value="Scissors">Scissors</button>
+        </div>
       </div>
     </div>
     <script src="./script.js"></script>
