Update start game messaging in index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       </div>
       <div class="gameboard__dialog">
         <p class="gameboard__para" id="gameboard-para">
-          Make a selection, if you dare...
+          Rock, paper, or scissors?
         </p>
       </div>
       <div class="gameboard__user">
