Adding id gameboard-dialog for easier js targeting

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="gameboard__computer">
         <p class="gameboard__computer-selection" id="computer-selection"></p>
       </div>
-      <div class="gameboard__dialog">
+      <div class="gameboard__dialog" id="gameboard-dialog">
         <p class="gameboard__para" id="gameboard-para">
           Rock, paper, or scissors?
         </p>
