Modify html for win pills to show games won

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
     <div class="gameboard">
       <div class="gameboard__computer">
         <p class="gameboard__computer-selection" id="computer-selection"></p>
+        <div id="cpu-wins">
+          <div class="cpu-win-pill"></div>
+          <div class="cpu-win-pill"></div>
+          <div class="cpu-win-pill"></div>
+          <div class="cpu-win-pill"></div>
+          <div class="cpu-win-pill"></div>
+        </div>
       </div>
       <div class="gameboard__dialog" id="gameboard-dialog">
         <p class="gameboard__para" id="gameboard-para">
@@ -17,6 +24,13 @@
         </p>
       </div>
       <div class="gameboard__user">
+        <div id="user-wins">
+          <div class="user-win-pill"></div>
+          <div class="user-win-pill"></div>
+          <div class="user-win-pill"></div>
+          <div class="user-win-pill"></div>
+          <div class="user-win-pill"></div>
+        </div>
         <p class="gameboard__user-selection" id="user-selection"></p>
         <div class="gameboard__btn-wrapper">
           <button value="Rock">Rock</button>
