Further modify html for displaying wins

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
       <div class="gameboard__computer">
         <p class="gameboard__computer-selection" id="computer-selection"></p>
         <div id="cpu-wins">
-          <div class="cpu-win-pill"></div>
-          <div class="cpu-win-pill"></div>
-          <div class="cpu-win-pill"></div>
-          <div class="cpu-win-pill"></div>
-          <div class="cpu-win-pill"></div>
+          <div class="win-pill cpu-win-pill"></div>
+          <div class="win-pill cpu-win-pill"></div>
+          <div class="win-pill cpu-win-pill"></div>
+          <div class="win-pill cpu-win-pill"></div>
+          <div class="win-pill cpu-win-pill"></div>
         </div>
       </div>
       <div class="gameboard__dialog" id="gameboard-dialog">
@@ -25,11 +25,11 @@
       </div>
       <div class="gameboard__user">
         <div id="user-wins">
-          <div class="user-win-pill"></div>
-          <div class="user-win-pill"></div>
-          <div class="user-win-pill"></div>
-          <div class="user-win-pill"></div>
-          <div class="user-win-pill"></div>
+          <div class="win-pill user-win-pill"></div>
+          <div class="win-pill user-win-pill"></div>
+          <div class="win-pill user-win-pill"></div>
+          <div class="win-pill user-win-pill"></div>
+          <div class="win-pill user-win-pill"></div>
         </div>
         <p class="gameboard__user-selection" id="user-selection"></p>
         <div class="gameboard__btn-wrapper">
