--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="gameboard">
       <div class="gameboard__computer">
         <p class="gameboard__computer-selection" id="computer-selection"></p>
-        <div id="cpu-wins">
+        <div class="win-pill-container" id="cpu-wins">
           <div class="win-pill cpu-win-pill"></div>
           <div class="win-pill cpu-win-pill"></div>
           <div class="win-pill cpu-win-pill"></div>
@@ -24,7 +24,7 @@
         </p>
       </div>
       <div class="gameboard__user">
-        <div id="user-wins">
+        <div class="win-pill-container" id="user-wins">
           <div class="win-pill user-win-pill"></div>
           <div class="win-pill user-win-pill"></div>
           <div class="win-pill user-win-pill"></div>
