--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <div class="gameboard__computer">
         <p class="gameboard__computer-selection" id="computer-selection"></p>
         <div class="win-pill-container" id="cpu-wins">
+          <p>Wins&ensp;</p>
           <div class="win-pill cpu-win-pill"></div>
           <div class="win-pill cpu-win-pill"></div>
           <div class="win-pill cpu-win-pill"></div>
@@ -25,6 +26,7 @@
       </div>
       <div class="gameboard__user">
         <div class="win-pill-container" id="user-wins">
+          <p>Wins&ensp;</p>
           <div class="win-pill user-win-pill"></div>
           <div class="win-pill user-win-pill"></div>
           <div class="win-pill user-win-pill"></div>
